samples/_failures_safe/1761145862_f7f3ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7a6f9d51.c: In function ‘main’:
./samples/SAFE/__tmp_7a6f9d51.c:171:12: error: missing terminating " character
  171 |     printf("\nTokens found:\n
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_7a6f9d51.c:171:5: error: expected expression at end of input
  171 |     printf("\nTokens found:\n
      |     ^~~~~~
./samples/SAFE/__tmp_7a6f9d51.c:171:5: error: expected declaration or statement at end of input
